
2003-03-27  Kentaro Sato <kentaro@ps.catv.ne.jp>
	* timidity/playmidi.c:
	  Fix behaviour of user drumset.

2003-03-27  Saito <timidity@flashmail.com>
	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Improve legato.
	  Improve NRPN cutoff control.
	* interface/w32g_subwin3.c:
	  Fix tracer window (W32GUI version)

2003-03-27  TAMUKI Shoichi <tamuki@linet.gr.jp>
	* timidity/playmidi.c, timidity/readmidi.c:
	  Fix temperament control with universal SysEx.

2003-03-27  Daisuke Aoki <dai@sweetparty.ne.jp>
	* interface/w32g_subwin3.c:
	  Fasten tracer window (W32GUI version)

2003-03-26  Saito <timidity@flashmail.com>
	* interface/w32g_subwin3.c:
	  Fasten tracer window (W32GUI version)

2003-03-26  TAMUKI Shoichi <tamuki@linet.gr.jp>
	* interface/alsaseq_c.c, interface/ncurs_c.c, interface/winsyn_c.c,
	  timidity/controls.h, timidity/playmidi.[ch], timidity/readmidi.c,
	  timidity/tables.[ch], timidity/timidity.c:
	  Support for temperament control with universal SysEx.
	  - Temperament keysig control
	  - Temperament type control

2003-03-26  Daisuke Aoki <dai@sweetparty.ne.jp>
	* interface/w32g_subwin.c (ListWndProc):
	  Add a check for nfiles when double-clickng in list window
	* interface/w32g_subwin3.c:
	  Bug fix in mutual exclusion for tracer window, which might cause
	  problems on Windows 2000.

2003-03-26  Saito <timidity@flashmail.com>
	* interface/w32g_subwin3.c:
	  Fix resource leak of tracer window (W32GUI version)
	  
2003-03-25  Saito <timidity@flashmail.com>
	* timidity/playmidi.c:
	  Fix channel pressure about LPF.
	  Weaken NRPN cutoff controls.
	* interface/w32g_subwin3.c, interface/w32g_res.rc:
	  Fix tracer window (W32GUI version)

2003-03-24  Saito <timidity@flashmail.com>
	* timidity/playmidi.h, timidity/resample.c:
	  Restore Voice struct sample_offset to int32
	* timidity/playmidi.c:
	  Fix panning.
	* timidity/mix.c:
	  Optimize MIXATION about voice-by-voice LPF.
	* interface/w32g_subwin3.c, interface/w32g_tracer.h,