@@ -3142,6 +3142,9 @@ void MPanelUpdate(void)
 		case  IS_PTM_FILE:
 			strcat(buffer,"[PTM]");
 			break;
+		case  IS_MFI_FILE:
+			strcat(buffer,"[MFI]");
+			break;
 		default:
 		case  IS_OTHER_FILE:
 			strcat(buffer,"[---]");
@@ -4015,8 +4018,8 @@ static char *DlgFileOpen(HWND hwnd, char *title, char *filter, char *dir)
 static void DlgMidiFileOpen(HWND hwnd)
 {
     char *dir, *file;
-    char *filter = "timidity file\0*.mid;*.smf;*.rcp;*.r36;*.g18;*.g36;*.lzh;*.zip;*.gz\0"
-		"midi file\0*.mid;*.smf;*.rcp;*.r36;*.g18;*.g36\0"
+    char *filter = "timidity file\0*.mid;*.smf;*.rcp;*.r36;*.g18;*.g36;*.rmi;*.lzh;*.zip;*.gz\0"
+		"midi file\0*.mid;*.smf;*.rcp;*.r36;*.g18;*.g36;*.rmi\0"
 		"archive file\0*.lzh;*.zip;*.gz\0"
 		"playlist file\0*.pls;*.m3u;*.asx\0"
 		"all files\0*.*\0"
